--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  background-color: white;
 }
 
 @for $i  from  1 through 12 {
@@ -21,27 +20,29 @@
   left: 0;
   height: 100vh;
   width: 188px;
-  background-color: #222222;
+  background-color: $color-bg-menu;
 }
-.topbar {
+
+.top {
   position: fixed;
   top: 0;
   left: 188px;
   height: 60px;
   width: calc(100vw - 188px);
-  background-color: #777777;
+  background-color: $color-bg-main;
 }
 
 .container {
   margin: 60px 0 0 0;
-  background-color: #f5f5f2;
+  background-color: $color-bg-back;
   padding: 18px;  
+  min-height: calc(100vh - 60px);
 }
 
 .container--full-menu {
-    margin-left: 188px;
+  margin-left: 188px;
 }
 
 .container--short-menu {
-    margin-left: 54px;
+  margin-left: 54px;
 }
