--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,10 +1,50 @@
 /* Colors */
-$paragraph-color: #000000;
-$brand-main-color: #ff0000;
+//Text color
+$color-text-contra: #ffffff;
+$color-text-dark: #333333;
+$color-text-light: #a6a6a6;
+$color-header: #979797;
 
-/* Font sizes */
-$paragraph-font-size: 16px;
+//Bacground or border color
+$color-bg-main: #ffffff;
+$color-bg-back: #f5f5f2;
+$color-bg-menu: #191919;
+$color-bg-menu-hover: #282828;
+$color-bg-box: #e3e3e3; //message, tabs, border   
+$color-bg-box2: #bababa; //message, border:hover
+$color-bg-confirm: #04ae00;
+$color-bg-reject: #ff0000;
+$color-bg-positive: #96cc9b;
+$color-bg-positive-hover: #74b67a;
+$color-bg-negative: #ec7171;
+$color-bg-negative-hover: #de5252;
 
-/* Fonts */
-$brand-font: "Open Sans", Helvetica, Arial;
-$paragraph-font: "Open Sans", Helvetica, Arial;
+//Links color
+$color-link: #56819f;
+$color-link-hover: #ffa200;
+
+//Buttons color
+$color-button: #f58220;
+$color-button-hover: #ffa200;
+$color-button-disable: #e3e3e3;
+
+//Shadow
+$color-shadow: rgba(0, 0, 0, 0.3); 
+
+/* Font */
+$font-size-base: 14px;
+$font-size-header: 1.14 rem;
+$font-size-text: 1 rem; //paragraph, form
+$font-size-small: 0.78 rem; //table body
+
+$font-family: 'Roboto', sans-serif;
+$font-light: 300;
+$font-normal: 400;
+$font-medium: 500;
+$font-bold: 700;
+
+/* box parameter */
+$box-padding: 18px;
+$box-border: 1px solid $color-bg-box;
+$radius: 4px;
+
