--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@
 //@import "components/form_field";
 
 /* Sections */
-// @import "section/registration_form";
+@import './sections/section-basic';
 
 /* Pages / Views */
 // @import "pages/registration"
