--- a/src/sass/sections/_section-basic.scss
+++ b/src/sass/sections/_section-basic.scss
@@ -2,6 +2,7 @@
   box-shadow: 5px 5px 10px -5px $color-shadow;
   background-color: $color-bg-main;
   border: $box-border;
+  margin-top: 20px;
   
   &__header {
     margin: 0;
