--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -24,7 +24,9 @@
 
 @media(max-width: 767px) {
   @include grid('sm');
+  
   .main {
+    margin-top: 60px;
     height: calc(100vh);
     background-color: $color-bg-back;
   }
@@ -32,6 +34,7 @@
 
 @media(min-width: 768px) {
   @include grid('md');
+  
   .main {
     margin-top: 60px;
     height: calc(100vh - 60px);
@@ -42,6 +45,7 @@
 
 @media(min-width: 992px) {
   @include grid('lg');
+  
   .main {
     margin-top: 60px;
     height: calc(100vh - 60px);
@@ -53,7 +57,3 @@
 @media(min-width: 1200px) {
   @include grid('xl');
 }
-
-/*Basic structure*/
-
-
