--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,14 +1,14 @@
 .menu {
-  
-  &_list {
+  &__list {
     list-style: none;
     margin: 0;
     padding: 0;
   }
-  &_link {
+
+  &__link {
     display: flex;
     height: 40px;
-    color: $color-text-menu;  
+    color: $color-text-menu;
     font-family: $font-family;
     font-weight: $font-normal;
     font-style: normal;
@@ -17,16 +17,17 @@
     font-size: $font-size-menu;
   }
 
-  &_title {
+  &__title {
     margin: auto 0 auto 15px;
   }
 
-  &_link--active{
+  &__link--active{
     background-color: $color-bg-menu-hover;
-    color: $color-text-contra;  
+    color: $color-text-contra;
     position: relative;
   }
-  &_link--active::after {
+
+  &__link--active::after {
     content: "";
     background-color: $color-bg-menu-after;
     display: box;
@@ -38,7 +39,7 @@
     z-index: 999;
   }
 
-  &_icon {
+  &__icon {
     font-size: $font-size-menu;
     margin: auto 0 auto 15px;
   }
