--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -22,13 +22,30 @@
   flex-wrap: wrap;
 }
 
+.main {
+  margin-top: 60px;
+  padding-top: 1px;
+  height: calc(100vh - 60px);
+  background-color: $color-bg-back;
+  position: relative;
+  z-index: 0;
+  transition: $transition;
+
+}
+
 @media(max-width: 767px) {
   @include grid('sm');
-  
+ 
   .main {
-    margin-top: 60px;
-    height: calc(100vh);
-    background-color: $color-bg-back;
+    overflow: hidden;
+    
+    & > * {
+      transition: $transition;
+    }
+
+    &--full-menu > * {
+      transform: translateX(100%);  
+    }
   }
 }
 
@@ -36,22 +53,16 @@
   @include grid('md');
   
   .main {
-    margin-top: 60px;
-    height: calc(100vh - 60px);
-    background-color: $color-bg-back;
     margin-left: 50px;
+    
+    &--full-menu {
+      margin-left: 188px;
+    }
   }
 }
 
 @media(min-width: 992px) {
   @include grid('lg');
-  
-  .main {
-    margin-top: 60px;
-    height: calc(100vh - 60px);
-    background-color: $color-bg-back;
-    margin-left: 188px;
-  }
 }
 
 @media(min-width: 1200px) {
