--- a/src/sass/sections/_side-bar.scss
+++ b/src/sass/sections/_side-bar.scss
@@ -1,9 +1,18 @@
 .side-bar {
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  background-color: $color-bg-menu;
+  overflow: hidden;
+  transition: $transition;
+
   &__menu-button {
-  height: 35px;
-  width: 35px;
-  padding: 5px 5px 0 5px;
-  margin: auto 20px;
+    height: 35px;
+    width: 35px;
+    padding: 5px 5px 0 5px;
+    margin: auto 15px auto 0;
   }
   
   &__hamburger {
@@ -11,11 +20,26 @@
     height: 4px;
     width: 100%;
     margin-bottom: 5px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    transition: $transition;
+  }
+
+  &--full &__hamburger:nth-child(1) {
+    transform: rotate(45deg) translateX(13px);
+  }
+
+  &--full &__hamburger:nth-child(2) {
+    transform: scaleX(0);
+  }
+
+  &--full &__hamburger:nth-child(3) {
+    transform: rotate(-45deg) translateX(13px);; 
   }
 
   &__logo {
     height: 35px;
-    margin: auto 20px;
+    margin: auto 0 auto 15px;
   }
 
   &__header {
@@ -24,18 +48,18 @@
     display: flex;
     justify-content: space-between;
     height: 60px;
+    background-color: $color-bg-menu;
   }
 }
 
 @media(max-width: 767px) {
   .side-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
     width: 0;
-    background-color: $color-bg-menu;
-    overflow: hidden;
+    padding-top: 60px;
+    
+    &--full {
+      width: 100vw;
+    }
 
     &__header {
       position: fixed;
@@ -47,27 +71,26 @@
 
 @media(min-width: 768px) {
   .side-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
     width: 50px;
-    background-color: $color-bg-menu;
-    overflow: hidden;
-  }
+
+    &__logo {
+      display: none;
+    }
+  
+    &__menu-button {
+      margin: auto;
+    }
+
+    &--full {
+      width: 188px;
+    }
+
+    &--full &__logo {
+      display: block;
+    }
+  
+    &--full &__menu-button {
+      margin: auto 15px auto 0;
+    }
+  }  
 }
-
-@media(min-width: 992px) {
-  .side-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 188px;
-    background-color: $color-bg-menu;
-  }
-}
-
-// @media(min-width: 1200px) {
-
-// }
