--- a/src/sass/sections/_section-basic.scss
+++ b/src/sass/sections/_section-basic.scss
@@ -15,6 +15,8 @@
   &__row {
     padding: $box-padding;
     border-bottom: $box-border;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   &__description {
