--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 /* Components */
 @import "components/menu";
 @import "components/button";
+@import "components/simple-table";
 
 /* Sections */
 @import './sections/section-basic';
