--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "components/menu";
 @import "components/button";
 @import "components/simple-table";
+@import "components/data-scope";
 
 /* Sections */
 @import './sections/section-basic';
